--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,55 @@
 version: '3'
+
 services:
-  microservice:
+  microservice_enid:
     build:
       context: .
       dockerfile: Dockerfile
-    image: reference_service:0.1
+    image: ${SERVICENAME}_service
+    container_name: ${SERVICENAME}_service
     ports:
       - "8000:8000"
     env_file:
       - .env
+    environment:
+      - ENVIRONMENT=${ENVIRONMENT}
     depends_on:
       - redis
       - postgres
+    volumes:
+      - .:/app
+    networks:
+      - backend
+
   redis:
+    container_name: ${SERVICENAME}_redis 
     image: redis:alpine
     volumes:
       - redis_data:/data
+    networks:
+      - backend
+
   postgres:
+    container_name: ${SERVICENAME}_postgres
     image: postgres:alpine
     ports:
       - "5432:5432"
-    env_file:
-      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env
+   
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      retries: 5
 
 volumes:
   redis_data:
   postgres_data:
+
+networks:
+  backend:
+    driver: bridge
